@@ -2,6 +2,8 @@ package ar.alex.biblioteca.business.enums;
 
 import ar.alex.biblioteca.business.*;
 
+
+
 public enum CategoriaType {
     ciencia("ciencia", CategoriaCiencia.class),
     historia("historia", CategoriaHistoria.class),
@@ -20,7 +22,9 @@ public enum CategoriaType {
         return this.name;
     }
 
-    public Categoria create() throws InstantiationException, IllegalAccessException {
-        return this.categoria.newInstance();
+
+    public Categoria create() throws ReflectiveOperationException {
+        return this.categoria.getDeclaredConstructor().newInstance();
     }
+
 }
